[workspace]
members = ["xtask"]

[package]
name = "podzol"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "A modpack package manager"
readme = "README.md"
repository = "https://github.com/morr0ne/podzol"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.95"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "serde",
] }
clap = { version = "4.5.27", features = [
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
] }
futures-io = "0.3.31"
futures-util = "0.3.31"
git2 = { version = "0.20.0", default-features = false }
glob = "0.3.2"
indicatif = "0.17.11"
inquire = "0.7.5"
itertools = "0.14.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "json",
    "http2",
    "charset",
    "rustls-tls-manual-roots-no-provider",
] }
rustls = { version = "0.23.21", features = ["brotli", "zlib"] }
rustls-platform-verifier = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.12.0", default-features = false, features = [
    "macros",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
